# ModForge-CLI

./: .gitignore  .mypy.ini  .ruff.toml  CHANGELOG  README.md  downloader.sh  pyproject.toml  smithpy.json
.github/workflows/: notify-coreos-repo.yml  release-runtime.yml  release.yml
TestPack/: ModForge-CLI.json  modrinth.index.json
configs/: modrinth_api.json  policy.json
docs/: _config.yml  index.md  schemas.md
docs/schemas/: modrinth_api.schema.json  policy.schema.json
scripts/: gen_version.py
src/: test.py
src/api/: __init__.py  modrith_api.py
src/core/: core.py  policy.py
src/modforge-cli/: __init__.py  __main__.py  cli.py
src/modforge-cli/core/: downloader.py  resolver.py
src/modforge_cli/: __init__.py  __main__.py  cli.py  test.py
src/modforge_cli/api/: modrinth.py
src/modforge_cli/cli/: __init__.py  export.py  modpack.py  mods.py  setup.py  shared.py  sklauncher.py
src/modforge_cli/core/: __init__.py  downloader.py  models.py  resolver.py  utils.py
src/smithpy/: __init__.py  __main__.py  __version__.py  cli.py
src/smithpy/api/: __init__.py  modrith_api.py
src/smithpy/core/: __init__.py  downloader.py  models.py  policy.py  resolver.py
testpack/: modrinth.index.json  smithpy.json
